fixed menu so that it is responsive and added sections continue to be all visible

--- a/src/header/style.css
+++ b/src/header/style.css
@@ -14,7 +14,6 @@
     box-shadow: unset;
 }
 
-
 .menu__button svg {
     width: 2em;
     height: 2em;
@@ -129,7 +128,7 @@
 .site__navigation .main__menu_ul li a {
     color: var(--text-color);
     display: block;
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-decoration: none;
 }
 
@@ -157,8 +156,8 @@
 }
 
 .the_menu {
-    padding-top: 20vh;
-    padding-bottom: 20vh;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
     padding-left: 0;
 }
 
@@ -167,8 +166,8 @@
         margin-left: 33.3333%;
     }
     .the_menu {
-        padding-top: 10vh;
-        padding-bottom: 10vh;
+        padding-top: 5vh;
+        padding-bottom: 5vh;
     }
 }
 
@@ -188,7 +187,28 @@
     color: var(--text-color-3);
 }
 
-@media (min-width: 768px) {
+@media (max-width: 767px) {
+    .site__navigation .main__menu_ul li a {
+        font-size: 1.5rem;
+    }
+    .the_menu .menu_item>a {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .site__navigation .main__menu_ul li a {
+        font-size: 2.2rem;
+    }
+    .the_menu .menu_item>a {
+        font-size: 3vw;
+    }
+}
+
+@media (min-width: 992px) {
+    .site__navigation .main__menu_ul li a {
+        font-size: 2.5rem;
+    }
     .the_menu .menu_item>a {
         font-size: 4.8vw;
     }
